<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_24"
        android:enabled="true"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_list_24"
        android:enabled="true"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_sent_24"
        android:enabled="true"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_24"
        android:enabled="true"
        android:title="@string/title_info" />

</menu>