<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center">


    <EditText
        android:hint="@string/city"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:id="@+id/city_text_view"
        android:imeOptions="actionNone"
        android:maxLines="1"
        android:inputType="text"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/borough"
        android:id="@+id/borough_text_view"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:imeOptions="actionNone"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/voivodeship"
        android:id="@+id/voivodeship_text_view"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_margin="10dp"
        android:imeOptions="actionNone"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SUBMIT AS FUCK"
        android:id="@+id/go_to_map_button"/>



</LinearLayout>